my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ESYNTAX_zero/ESYNTAX_zero.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESYNTAX_zero.dml:10:9: error ESYNTAX: syntax error at '0'
